--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,23 +1,30 @@
 {
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
     "target": "es6",
     "lib": ["DOM", "es2015", "es2016", "es2017", "es2018", "es2019", "es2020"],
 
+    // sourceMap
+    "sourceMap": true,
+
+    // module
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
 
+    // lint
     "strict": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "noFallthroughCasesInSwitch": true,
 
-    "esModuleInterop": true,
+    // more spec
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "paths": {
+      "@config/*": ["src/config/*"],
+      "@util/*": ["src/util/*"],
       "@/*": ["src/*"]
     }
   }
