Chore #noissue : subscription 설정추가

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -16,6 +16,7 @@
         "root": ["."],
         "alias": {
           "@util": "./src/util",
+          "@type": "./src/types"
           "@": "./src"
         }
       }
