--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -25,6 +25,7 @@
     "paths": {
       "@config/*": ["src/config/*"],
       "@util/*": ["src/util/*"],
+      "@type/*": ["src/types/*"],
       "@/*": ["src/*"]
     }
   }
