--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.6",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -10,9 +12,12 @@
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -20,6 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "pretypes": "graphql-codegen",
+    "types": "apollo codegen:generate src/types/api.d.ts --queries=src/queries/**/*.queries.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/introspection": "^1.18.1",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
