Chore #noissue : craco 절대경로 설정 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,8 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "craco.config.js"
+  ],
+  "extends": "./tsconfig.paths.json"
 }
