Chore #noissue : craco 설치, client 절대경로 설정
- server babelrc 패키지 삭제

--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "@*": ["src/*"],
-      "@routes/*": ["src/routes/*"]
+      "@routes/*": ["src/routes/*"],
+      "@queries/*": ["src/queries/*"],
+      "@type/*": ["src/types/*"]
     }
   }
 }
