--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "apollo-server-express": "^2.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
+    "mongoose": "^5.10.15",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@graphql-codegen/cli": "^1.19.4",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-resolvers": "^1.18.0",
+    "@types/mongoose": "^5.10.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-plugin-module-resolver": "^4.0.0",
