--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,6 +26,7 @@
       "@config/*": ["src/config/*"],
       "@util/*": ["src/util/*"],
       "@type/*": ["src/types/*"],
+      "@model/*": ["src/models/*"],
       "@/*": ["src/*"]
     }
   }
