--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "antd": "^4.9.4",
     "craco-alias": "^2.1.1",
+    "craco-less": "^1.17.1",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
