--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -16,6 +20,10 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "craco.config.js", "**/*.ts"],
+  "include": [
+    "src",
+    "craco.config.js",
+    "**/*.ts"
+  ],
   "extends": "./tsconfig.paths.json"
 }
