Chore #noissue : global style 적용, craco less 플러그인 적용

--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -5,7 +5,8 @@
       "@*": ["src/*"],
       "@routes/*": ["src/routes/*"],
       "@queries/*": ["src/queries/*"],
-      "@type/*": ["src/types/*"]
+      "@type/*": ["src/types/*"],
+      "@theme/*": ["src/theme/*"]
     }
   }
 }
