--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "@apollo/client": "^3.3.6",
     "@apollo/react-hooks": "^4.0.0",
     "@craco/craco": "^6.0.0",
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -16,6 +19,8 @@
     "antd": "^4.9.4",
     "craco-alias": "^2.1.1",
     "craco-less": "^1.17.1",
+    "emotion-reset": "^3.0.0",
+    "emotion-theming": "^10.0.27",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
