--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,21 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
+    "helmet": "^4.2.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -26,7 +35,13 @@
     "@graphql-codegen/cli": "^1.19.4",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-resolvers": "^1.18.0",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/hpp": "^0.2.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
+    "@types/morgan": "^1.9.2",
+    "@types/passport-jwt": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-plugin-module-resolver": "^4.0.0",
