Feature  #noissue : 회원가입 api 구현

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,6 +27,7 @@
       "@util/*": ["src/util/*"],
       "@type/*": ["src/types/*"],
       "@model/*": ["src/models/*"],
+      "@service/*": ["src/services/*"],
       "@/*": ["src/*"]
     }
   }
