--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "apollo-server-express": "^2.19.0",
+    "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
