--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/passport-local": "^1.0.33",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
